--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "axios": "^1.7.7",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.27.0",
     "zod": "^3.23.8"
