--- a/shiftgeniusapi/src/main/resources/application.properties
+++ b/shiftgeniusapi/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=shiftgeniusapi
 spring.datasource.url=jdbc:mysql://localhost:3306/shiftgenius_db
 spring.datasource.username=root
-# spring.datasource.password=Xiao8matt..
+spring.datasource.password=Xiao8matt..
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
